samples/_failures_safe/1761445835_2a2c86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8990dbdb.c: In function ‘main’:
./samples/SAFE/__tmp_8990dbdb.c:166:56: error: expected ‘)’ at end of input
  166 |         double result = safe_power(numbers[i], exponent
      |                                   ~                    ^
      |                                                        )
./samples/SAFE/__tmp_8990dbdb.c:166:9: error: expected declaration or statement at end of input
  166 |         double result = safe_power(numbers[i], exponent
      |         ^~~~~~
./samples/SAFE/__tmp_8990dbdb.c:166:9: error: expected declaration or statement at end of input
